[project]
name = "tekmartech-integrations"
version = "0.1.0"
description = "MCP servers for Tekmar integration layer"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.76",
    "google-api-python-client>=2.193.0",
    "google-auth>=2.49.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "pydantic>=2.12.5",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = []
